# libvideogfx

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  acconfig.h  configure.ac  configure.in  libvideogfx.m4  libvideogfx.pc.in
doc/images/: bitmap.eps
examples/: .cvsignore  Makefile.am  audioout.cc  bitstream_output.cc  chromaspaces.cc  cputest.cc  dynarray.cc  filedisplay.cc  filtertest.cc  median.cc  persptransform.cc  pixmaptest.cc  ppm2avi.cc  smartpointer.cc  symmatrix.cc  v4ledges.cc  v4ltest.cc  viewfile.cc  x11paint.cc  x11test.cc
libvideogfx/: AUTHORS  Doxyfile  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  bitmap  configure.in  error.cc  error.hh  init.cc  init.hh  libvideogfx-config.in  libvideogfx.hh.in  libvideogfx.spec.in  macros.hh  types.hh
libvideogfx/arch/: Makefile.am  cpu.cc  cpu.hh  mmx.h
libvideogfx/audio/: Makefile.am
libvideogfx/audio/fileio/: Makefile.am  audiosink_linux.cc  audiosink_linux.hh
libvideogfx/containers/: Makefile.am  array.hh  array.icc  queue.hh  queue.icc  symmatrix.hh
libvideogfx/examples/: Makefile.am  audioout.cc  bitstream_output.cc  chromaspaces.cc  chromatest.cc  convfile.cc  copytest.cc  cputest.cc  drawingtest.cc  dynarray.cc  filedisplay.cc  filtertest.cc  imagetest.cc  median.cc  persptransform.cc  pixmaptest.cc  ppm2avi.cc  ppmflip.cc  smartpointer.cc  symmatrix.cc  test-libvideogfx.cc  v4ledges.cc  v4ltest.cc  viewfile.cc  x11paint.cc  x11test.cc
libvideogfx/graphics/color/: Makefile.am  colorspace.cc  colorspace.hh  img2raw.hh  internal_grey2rgb_mmx.cc  internal_grey2rgb_scalar.hh  internal_img2raw.hh  internal_rgb2rgb_scalar.cc  internal_yuv2rgb_mmx.hh  internal_yuv2rgb_scalar.cc  internal_yuv2rgb_scalar.hh
libvideogfx/graphics/datatypes/: Makefile.am  bitmap.cc  bitmap.hh  image.cc  primitives.hh
libvideogfx/graphics/draw/: Makefile.am  blit.hh  format.cc  format.hh  scale.hh
libvideogfx/graphics/fileio/: Makefile.am  ffmpeg.cc  ffmpeg.hh  ffmpeg_writer.cc  ffmpeg_writer.hh  imagesink.cc  imagesink.hh  jpeg.cc  mpeg.cc  mplayer.cc  mplayer.hh  png.cc  png.hh  ppm.cc  raw.hh  unified_loader.hh  unified_reader.hh  unified_writer.cc  uyvy.hh  v4l.cc  v4l.hh  yuv.cc  yuv4mpeg.hh  yuv_vqeg.cc  yuv_vqeg.hh
libvideogfx/graphics/filters/: .cvsignore  Makefile.am  binomial.hh  gauss_mmx.cc  linear.cc  linear.icc  resampler.h  scale.cc  scale.hh
libvideogfx/graphics/geometry/: Makefile.am  matrix.hh  transform.hh
libvideogfx/graphics/measure/: Makefile.am  snr.cc  snr.hh  ssim.cc  ssim.hh
libvideogfx/graphics/visualize/: Makefile.am  regions.hh
libvideogfx/libvideogfx/: Makefile.am  error.cc  error.hh  init.cc  init.hh  libvideogfx.hh  libvideogfx.hh.in  macros.hh  types.hh
libvideogfx/libvideogfx/arch/: .cvsignore  cpu.cc  cpu.hh  mmx.h
libvideogfx/libvideogfx/audio/fileio/: Makefile.am  audiosink.cc  audiosink.hh  audiosink_linux.cc  audiosink_linux.hh  timedsink.hh
libvideogfx/libvideogfx/containers/: Makefile.am  array.hh  array.icc  array2.hh  array2.icc  dynarray.hh  heap.hh  heap.icc  queue.hh  queue.icc  symmatrix.hh
libvideogfx/libvideogfx/graphics/: Makefile.am
libvideogfx/libvideogfx/graphics/basic/: Makefile.am  bitmap.cc  bitmap.hh  image.cc  image.hh
libvideogfx/libvideogfx/graphics/color/: Makefile.am  colorspace.cc  colorspace.hh  img2raw.cc  img2raw.hh  internal_grey2rgb_mmx.cc  internal_grey2rgb_mmx.hh  internal_grey2rgb_scalar.cc  internal_grey2rgb_scalar.hh  internal_rgb2rgb_scalar.cc  internal_rgb2rgb_scalar.hh  internal_yuv2rgb_mmx.cc  internal_yuv2rgb_mmx.hh  internal_yuv2rgb_scalar.cc  internal_yuv2rgb_scalar.hh
libvideogfx/libvideogfx/graphics/datatypes/: Makefile.am  bitmap.cc  bitmap.hh  image.cc  image.hh  image_tmpl.cc  primitives.hh
libvideogfx/libvideogfx/graphics/draw/: blit.hh  draw.cc  draw.hh  format.cc  format.hh  pixelops.hh  scale.hh
libvideogfx/libvideogfx/graphics/fileio/: Makefile.am  audiosink.hh  base.hh  ffmpeg.cc  ffmpeg.hh  ffmpeg_writer.cc  ffmpeg_writer.hh  imagesink.cc  imagesink.hh  jpeg.cc  jpeg.hh  mpeg.cc  mpeg.hh  mplayer.cc  mplayer.hh  png.cc  png.hh  ppm.cc  ppm.hh  raw.cc  raw.hh  timedsink.hh  unified_loader.cc  unified_loader.hh  unified_reader.cc  unified_reader.hh  unified_writer.cc  unified_writer.hh  uyvy.cc  uyvy.hh  v4l.cc  v4l.hh  yuv.cc  yuv.hh  yuv4mpeg.cc  yuv4mpeg.hh  yuv_vqeg.cc  yuv_vqeg.hh
libvideogfx/libvideogfx/graphics/filters/: Makefile.am  binomial.cc  binomial.hh  gauss_mmx.cc  gauss_mmx.hh  linear.cc  linear.hh  linear.icc  median.cc  median.hh
libvideogfx/libvideogfx/graphics/geometry/: matrix.cc  matrix.hh  transform.cc  transform.hh
libvideogfx/libvideogfx/graphics/measure/: .cvsignore  snr.cc  snr.hh
libvideogfx/libvideogfx/graphics/visualize/: Makefile.am  regions.cc  regions.hh
libvideogfx/libvideogfx/utility/: Makefile.am  bitmanip.cc  bitmanip.hh  fastalloc.cc  fastalloc.d  fastalloc.hh  math.cc  math.hh  refcntr.hh  smartpointer.hh
libvideogfx/libvideogfx/utility/bitstream/: Makefile.am  bitbuffer.cc  bitbuffer.hh  bitreader.cc  bitreader.hh  bitreader.icc  bitreader_fast.hh  bytebuffer.cc  bytebuffer.hh  inputstream.cc  inputstream.hh  inputstream_istr.cc  inputstream_istr.hh
libvideogfx/libvideogfx/x11/: dispimg.cc  dispimg.hh  draw_x11.cc  draw_x11.hh  imgwin.cc  imgwin.hh  server.cc  server.hh
libvideogfx/utility/: Makefile.am  fastalloc.cc  math.cc  refcntr.hh  smartpointer.hh
libvideogfx/utility/bitstream/: Makefile.am  bitbuffer.cc  bitreader.cc  bitreader_fast.hh  inputstream_istr.cc
libvideogfx/x11/: Makefile.am  dispimg.cc  dispimg.hh  draw_x11.hh  imgwin.cc  imgwin.hh  server.cc  server.hh
