## Makefile.am for libvideogfx/libvideogfx/utility

SUBDIRS = bitstream

libvideogfx_utility_includedir = \
	$(includedir)/libvideogfx/utility

noinst_LTLIBRARIES = libvideogfx-utility.la

libvideogfx_utility_la_SOURCES = \
	math.hh	\
	math.cc	\
	bitmanip.hh	\
	bitmanip.cc	\
	fastalloc.cc

libvideogfx_utility_include_HEADERS = \
	math.hh	\
	bitmanip.hh	\
	fastalloc.hh	\
	refcntr.hh	
#	smartpointer.hh

INCLUDES = \
	-I$(top_srcdir)
