## Makefile.am for libvideogfx/libvideogfx/x11

noinst_LTLIBRARIES = libvideogfx-x11.la

libvideogfx_x11_includedir = \
	$(includedir)/libvideogfx/x11

libvideogfx_x11_la_SOURCES = \
	server.cc	\
	server.hh	\
	draw_x11.cc	\
	draw_x11.hh	\
	dispimg.cc	\
	dispimg.hh	\
	imgwin.cc	\
	imgwin.hh


libvideogfx_x11_include_HEADERS = \
	dispimg.hh	\
	imgwin.hh	\
	draw_x11.hh	\
	server.hh

AM_CPPFLAGS = \
	-I$(top_srcdir)
