## Makefile.am for libvideogfx/libvideogfx/graphics/datatypes

noinst_LTLIBRARIES = libvideogfx-graphics-datatypes.la

libvideogfx_graphics_datatypes_la_SOURCES = \
	primitives.hh	\
	bitmap.hh	\
	bitmap.cc	\
	image.cc	\
	image.hh	\
	image_tmpl.cc

libvideogfx_graphics_datatypes_includedir = \
	$(includedir)/libvideogfx/graphics/datatypes

libvideogfx_graphics_datatypes_include_HEADERS = \
	primitives.hh	\
	bitmap.hh	\
	image.hh

AM_CPPFLAGS = \
	-I$(top_srcdir)
