## Makefile.am for libvideogfx/libvideogfx/graphics/draw

noinst_LTLIBRARIES = libvideogfx-graphics-draw.la

libvideogfx_graphics_draw_includedir = \
	$(includedir)/libvideogfx/graphics/draw

libvideogfx_graphics_draw_la_SOURCES = \
	draw.cc		\
	draw.hh		\
	format.hh	\
	format.cc	\
	pixelops.hh

libvideogfx_graphics_draw_include_HEADERS = \
	draw.hh		\
	format.hh	\
	pixelops.hh	\
	blit.hh		\
	scale.hh

AM_CPPFLAGS = \
	-I$(top_srcdir)
