## Makefile.am for libvideogfx/libvideogfx/graphics/geometry

noinst_LTLIBRARIES = libvideogfx-graphics-geometry.la

libvideogfx_graphics_geometry_la_SOURCES = \
	matrix.hh	\
	matrix.cc       \
	transform.hh	\
	transform.cc

libvideogfx_graphics_geometry_includedir = \
	$(includedir)/libvideogfx/graphics/geometry

libvideogfx_graphics_geometry_include_HEADERS = \
	matrix.hh 	\
	transform.hh

AM_CPPFLAGS = \
	-I$(top_srcdir)
