## Makefile.am for libvideogfx/libvideogfx/graphics/measure

noinst_LTLIBRARIES = libvideogfx-graphics-measure.la

libvideogfx_graphics_measure_la_SOURCES = \
	snr.hh	\
	snr.cc

libvideogfx_graphics_measure_includedir = \
	$(includedir)/libvideogfx/graphics/measure

libvideogfx_graphics_measure_include_HEADERS = \
	snr.hh

INCLUDES = \
	-I$(top_srcdir)
