## Makefile.am for libvideogfx/utility/bitstream

libvideogfx_utility_bitstream_includedir = \
	$(includedir)/libvideogfx/utility/bitstream

noinst_LTLIBRARIES = libvideogfx-utility-bitstream.la

libvideogfx_utility_bitstream_la_SOURCES = \
	bitreader_fast.hh	\
	bitbuffer.hh \
	bitbuffer.cc \
	bitreader.cc	\
	bitreader.hh	\
	bitreader.icc	\
	bytebuffer.cc	\
	inputstream.hh	\
	inputstream.cc	\
	inputstream_istr.hh	\
	inputstream_istr.cc

libvideogfx_utility_bitstream_include_HEADERS = \
	bitbuffer.hh	\
	bitreader_fast.hh	\
	bitreader.hh	\
	bitreader.icc	\
	bytebuffer.hh	\
	inputstream.hh	\
	inputstream_istr.hh

INCLUDES = \
	-I$(top_srcdir)
