## Makefile.am for libvideogfx/libvideogfx/audio/fileio

noinst_LTLIBRARIES = libvideogfx-audio-fileio.la

libvideogfx_audio_fileio_includedir = \
	$(includedir)/libvideogfx/audio/fileio

libvideogfx_audio_fileio_la_SOURCES = \
	audiosink.hh	\
	timedsink.hh

libvideogfx_audio_fileio_include_HEADERS = \
	audiosink.hh	\
	timedsink.hh

INCLUDES = \
	-I$(top_srcdir)

