## Makefile.am for libvideogfx/libvideogfx/graphics/basic

noinst_LTLIBRARIES = libvideogfx-graphics-basic.la

libvideogfx_graphics_basic_includedir = \
	$(includedir)/libvideogfx/graphics/basic

libvideogfx_graphics_basic_la_SOURCES = \
	bitmap.hh	\
	bitmap.cc	\
	image.cc	\
	image.hh	\
	image_tmpl.cc

libvideogfx_graphics_basic_include_HEADERS = \
	bitmap.hh	\
	image.hh

INCLUDES = \
	-I$(top_srcdir)
