## Makefile.am for libvideogfx/libvideogfx/graphics/datatypes

noinst_LTLIBRARIES = libvideogfx-graphics-datatypes.la

libvideogfx_graphics_datatypes_la_SOURCES = \
	primitives.hh

libvideogfx_graphics_datatypes_includedir = \
	$(includedir)/libvideogfx/graphics/datatypes

libvideogfx_graphics_datatypes_include_HEADERS = \
	primitives.hh

INCLUDES = \
	-I$(top_srcdir)
