## Makefile.am for libvideogfx/libvideogfx/graphics/visualize

noinst_LTLIBRARIES = libvideogfx-graphics-visualize.la

libvideogfx_graphics_visualize_la_SOURCES = \
	regions.cc	\
	regions.hh

#	markblks.cc	\
#	markblks.hh	\
#	motionfield.cc	\
#	motionfield.hh	\

libvideogfx_graphics_visualize_includedir = \
	$(includedir)/libvideogfx/graphics/visualize

libvideogfx_graphics_visualize_include_HEADERS = \
	regions.hh

#	markblks.hh	\
#	motionfield.hh	\

INCLUDES = \
	-I$(top_srcdir)
